# BeatstarsDownloader

./: .gitignore  LICENSE  Makefile  README.md  instructions.txt  main.py  pyproject.toml  requirements.txt  setup.py
.github/workflows/: lint.yml  publish.yml
beatstarsdownloader/: __init__.py  __main__.py  beatstarsdownloader.py  config.py  logger.py  url_helpers.py
media/: example_url_list.txt
